# FABulous

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  flake.nix  pyproject.toml
debugtools/: resumeFlow.py
fabulous/: fabulous_api.py
fabulous/extendfabulous/: userflow.py
fabulous/extendfabulous_template/: userflow.py
fabulous/fabric_files/FABulous_project_template_common/Tile/DSP/: gds_config.yaml
fabulous/fabric_files/FABulous_project_template_common/Tile/S_term_DSP/: gds_config.yaml
fabulous/fabric_generator/gds_generator/flows/: fabric_macro_flow.py  flow_define.py  full_fabric_flow.py  hybridflow.py
fabulous/fabric_generator/gds_generator/script/: odb_power.py  pdn_config.tcl  tile_io_place.py
fabulous/fabric_generator/gds_generator/steps/: odb_connect_pdn.py
fabulous/fabulous_cli/: fabulous_cli.py
tests/: __init__.py  conftest.py  guide.md
tests/cli_test/: conftest.py  test_arguments.py  test_cli.py
tests/fabric_gen_test/: conftest.py
tests/fabric_gen_test/configmem_test/: test_gen_configmem.py
tests/fabric_gen_test/fabric_test/: test_gen_fabric.py
tests/fabric_gen_test/switchmatrix_test/: test_gen_switchmatrix.py  test_parse_switchmatrix.py
tests/fabric_gen_test/testdata/: models.vhd
tests/gds_flow_test/flow_test/: conftest.py  test_gen_io_pin_config_yaml.py
tests/gds_flow_test/script_test/: conftest.py  test_odb_power.py  test_tile_io_place.py
tests/gds_flow_test/step_test/: test_auto_diode.py  test_extract_pdk_info.py  test_io_placement.py  test_tile_optimisation.py  test_while_step.py
tests/reference_test/: __init__.py  helpers.py  reference_projects_test.py
tests/utils_test/: test_fabulous_settings.py  test_yosys_obj.py
